--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webrtc-multi-peer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kevinjpuscan.github.io/webrtc-multi-peer",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
