--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=http://localhost:1337
-REACT_APP_SECRET=@your-name-secret
+REACT_APP_API_URL=http://localhost:8080
+REACT_APP_SECRET_KEY=@your-name-secret
+REACT_APP_URL=http://localhost:3000
